@@ -2,23 +2,21 @@
 mode con:cols=150 
 color 1B 
 TITLE Aion German - Game Server Console
+SET "JAVA_HOME=C:\Program Files\Eclipse Adoptium\jdk-25.0.3.9-hotspot"
+SET "PATH=%JAVA_HOME%\bin;%PATH%"
 :START
 CLS
-SET JAVAVER=1.7
 SET NUMAENABLE=false
 CLS
 IF "%MODE%" == "" (
 CALL PanelGS.bat
 )
 
-IF "%JAVAVER%" == "1.7" (
-SET JAVA_OPTS=-XX:-UseSplitVerifier -XX:+TieredCompilation %JAVA_OPTS%
-)
 IF "%NUMAENABLE%" == "true" (
 SET JAVA_OPTS=-XX:+UseNUMA %JAVA_OPTS%
 )
 ECHO Starting Aion German Game Server in %MODE% mode.
-JAVA %JAVA_OPTS% -ea -javaagent:./libs/al-commons.jar -cp ./libs/*;AL-Game.jar com.aionemu.gameserver.GameServer
+JAVA %JAVA_OPTS% --enable-preview -ea -javaagent:./libs/al-commons.jar -cp ./libs/*;AL-Game.jar com.aionemu.gameserver.GameServer
 SET CLASSPATH=%OLDCLASSPATH%
 IF ERRORLEVEL 2 GOTO START
 IF ERRORLEVEL 1 GOTO ERROR
